--- a/wsr-skillcloud/tasks/CreateUser.yml
+++ b/wsr-skillcloud/tasks/CreateUser.yml
@@ -1,7 +1,7 @@
 - name: Create User
   user:
     name: "{{ item[0] }}"
-    password: "{{ item[1] }}"
+    password: "{{ item[1] | password_hash('sha512') }}"
     state: present
     shell: /bin/bash
     system: no
