--- a/wsr-skillcloud/run.yml
+++ b/wsr-skillcloud/run.yml
@@ -6,3 +6,5 @@
     - import_tasks: tasks/packageInstall.yml
     - import_tasks: tasks/CreateUser.yml
     - import_tasks: tasks/copyNginxFiles.yml
+    - import_tasks: tasks/SSHport.yml
+    - import_tasks: tasks/ufwConfig.yml
