--- a/wsr-skillcloud/nginx.conf
+++ b/wsr-skillcloud/nginx.conf
@@ -6,9 +6,9 @@ events {
 
 http {
   upstream balance {
-    server {{ IP_address_project_1 }}:8080;
-    server {{ IP_address_project_2 }}:8080;
-    server {{ IP_address_project_3 }}:8080;
+    server 10.1.239.150:8080;
+    server 10.1.239.151:8080;
+    server 10.1.239.152:8080;
 }
 
   server {
